tests/NormalTests/paczka2/big_fuzzy/37784402.err
Error in line 1: Mf8wC6XL A376 75,1
Error in line 6: el4xeUiSn2 S550 89,1
Error in line 10: 8vS6W S543 31,8
Error in line 14: Mf8wC6XL A524 50,64
Error in line 8: qWxzLhye S543 27,5
Error in line 9: Mf8wC6XL A524 22,4
Error in line 20: yY8 A524 13,2
Error in line 28: wwJ S550 11,9
Error in line 38: yY8 A376 93,4
Error in line 52: yY8 A376 48,9
Error in line 49: wwJ A376 61,8
Error in line 59: yY8 S550 7r,7
Error in line 60: wwJ A376 73,5
Error in line 54: yY8 S550 33,2
Error in line 75: wwJ A376 30,1
Error in line 73: Mf8wC6XL S543 20,8
Error in line 27: qWxzLhye S550 107,9
Error in line 83: Mf8wC6XL S550 19,7
Error in line 90: Mf8wC6XL A524 97,1
Error in line 96: el4xeUiSn2 S543 90,5
Error in line 102: wwJ A524 70,5
Error in line 105: wwJ S543 95,1
Error in line 111: el4xeUiSn2 S550 3,7
Error in line 114: el4xeUiSn2 A376 49,71
Error in line 113: el4xeUiSn2 A524 26,3
Error in line 145: A376 S543 42,0
Error in line 138: wwJ A376 88,3
Error in line 149: wwJ S550 68,1
Error in line 143: el4xeUiSn2 A376 188,1
Error in line 158: el4xeUiSn2 S543 88,0
Error in line 156: wwJ A376 10,4
Error in line 164: qWxzLhye A524 48,6
Error in line 168: el4xeUiSn2 S550 71,0
Error in line 174: qWxzLhñe A376 70,7
Error in line 175: wwJ A524 76,5
Error in line 172: el4xeUiSn2 S543 82,1
Error in line 180: el4xeUiSn2 A376 94,0
Error in line 178: wwJ S550 68,4
Error in line 209: wwJ A376 94,1
Error in line 208: A376 A524 54,6
Error in line 213: yY8 A376 2,6
Error in line 218: yY8 S550 41,4
Error in line 219: yY8 A524 57,0
Error in line 225: Mf8wC6XL S550 62,8
Error in line 223: yY8 S550 90,3
Error in line 227: A376 A376 1,4
Error in line 194: qWxzLhye S543 72,7
Error in line 231: 8vS6W A376 47,3
Error in line 234: Mf8wC6XL A524 153,3
Error in line 235: A376 S543 20,6
Error in line 244: el4xeUiSn2 S543 46,8
